feat: add product pages without responsiveness

--- a/boutique_page.html
+++ b/boutique_page.html
@@ -1345,92 +1345,172 @@
                                     </div>
                                     <div class="row">
                                         <div class="item col-md-4 col-sm-6 col-xs-6">
-                                            <div class="look_item">
-                                                <div class="picture_block"></div>
-                                                <div class="name_block">
-                                                    <a href="#">
-                                                        <i class="item_icon"></i>
-                                                        <span>Bangkok Tshirts</span>
-                                                    </a>
+                                            <a href="look_book_page.html">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            </a>
+
                                         </div>
                                         <div class="item col-md-4 col-sm-6 col-xs-6">
-                                            <div class="look_item">
-                                                <div class="picture_block"></div>
-                                                <div class="name_block">
-                                                    <a href="#">
-                                                        <i class="item_icon"></i>
-                                                        <span>Bangkok Tshirts</span>
-                                                    </a>
+                                            <a href="#">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            </a>
+
                                         </div>
                                         <div class="item col-md-4 col-sm-6 col-xs-6">
-                                            <div class="look_item">
-                                                <div class="picture_block"></div>
-                                                <div class="name_block">
-                                                    <a href="#">
-                                                        <i class="item_icon"></i>
-                                                        <span>Bangkok Tshirts</span>
-                                                    </a>
+                                            <a href="#">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            </a>
+
                                         </div>
                                         <div class="item col-md-4 col-sm-6 col-xs-6">
-                                            <div class="look_item">
-                                                <div class="picture_block"></div>
-                                                <div class="name_block">
-                                                    <a href="#">
-                                                        <i class="item_icon"></i>
-                                                        <span>Bangkok Tshirts</span>
-                                                    </a>
+                                            <a href="#">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            </a>
+
                                         </div>
                                         <div class="item col-md-4 col-sm-6 col-xs-6">
-                                            <div class="look_item">
-                                                <div class="picture_block"></div>
-                                                <div class="name_block">
-                                                    <a href="#">
-                                                        <i class="item_icon"></i>
-                                                        <span>Bangkok Tshirts</span>
-                                                    </a>
+                                            <a href="#">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            </a>
+
                                         </div>
                                         <div class="item col-md-4 col-sm-6 col-xs-6">
-                                            <div class="look_item">
-                                                <div class="picture_block"></div>
-                                                <div class="name_block">
-                                                    <a href="#">
-                                                        <i class="item_icon"></i>
-                                                        <span>Bangkok Tshirts</span>
-                                                    </a>
+                                            <a href="#">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            </a>
+
                                         </div>
                                         <div class="item col-md-4 col-sm-6 col-xs-6">
-                                            <div class="look_item">
-                                                <div class="picture_block"></div>
-                                                <div class="name_block">
-                                                    <a href="#">
-                                                        <i class="item_icon"></i>
-                                                        <span>Bangkok Tshirts</span>
-                                                    </a>
+                                            <a href="#">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            </a>
+
                                         </div>
                                         <div class="item col-md-4 col-sm-6 col-xs-6">
-                                            <div class="look_item">
-                                                <div class="picture_block"></div>
-                                                <div class="name_block">
-                                                    <a href="#">
-                                                        <i class="item_icon"></i>
-                                                        <span>Bangkok Tshirts</span>
-                                                    </a>
+                                            <a href="#">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            </a>
+
+                                        </div>
+                                        <div class="item col-md-4 col-sm-6 col-xs-6">
+                                            <a href="#">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </a>
+
+                                        </div>
+                                        <div class="item col-md-4 col-sm-6 col-xs-6">
+                                            <a href="#">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </a>
+
+                                        </div>
+                                        <div class="item col-md-4 col-sm-6 col-xs-6">
+                                            <a href="#">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </a>
+
+                                        </div>
+                                        <div class="item col-md-4 col-sm-6 col-xs-6">
+                                            <a href="#">
+                                                <div class="look_item">
+                                                    <div class="picture_block"></div>
+                                                    <div class="name_block">
+                                                        <div>
+                                                            <i class="item_icon"></i>
+                                                            <span>Bangkok Tshirts</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </a>
+
                                         </div>
                                     </div>
                                     <div class="row">
