--- a/checkout_step_2.html
+++ b/checkout_step_2.html
@@ -386,7 +386,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-push-6 col-sm-6 col-xs-pull-6 col-xs-6step_block">
+                            <div class="col-sm-pull-6 col-sm-6 col-xs-pull-6 col-xs-6 step_block">
                                 <div class="row">
                                     <ul class="nav nav-tabs  step2_tab" role="tablist">
                                         <li role="presentation" class="card active"><a href="#card" aria-controls="card"
