feat: add boutique owner landing page without responsiveness

--- a/add_product_step_1.html
+++ b/add_product_step_1.html
@@ -524,7 +524,7 @@
                                     <div class="form-group file_block">
                                         <h3>UPLOAD PHOTOS (minimum size 504 x 504 px)</h3>
                                         <div class="file_input">
-                                            <label for="product_photos"><i></i></label>
+                                            <label title="Upload photo" for="product_photos"><i></i></label>
                                             <input type="file" name="product_photos" id="product_photos">
                                         </div>
                                         <a href="add_product_step_2.html" class="btn_step">Next</a>
