--- a/contact_us_success.html
+++ b/contact_us_success.html
@@ -334,7 +334,7 @@
                     <div class="row">
                         <div class="contact_block">
                             <div class="contact_header">
-                                <div class="title">Checkout</div>
+                                <div class="title">Contact Us</div>
                                 <div class="close_button"><span></span></div>
                             </div>
                             <div class="confirmation_block">
