--- a/checkout_step_3.html
+++ b/checkout_step_3.html
@@ -284,7 +284,7 @@
                 <button type="button" class="close" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
                 <div class="cart_header">
-                    <i class="cart"></i>
+                    <i class="cart fa fa-shopping-cart"></i>
                 </div>
                 <div class="cart_body">
                     <div class="cart_elements">
@@ -318,7 +318,8 @@
                 </div>
                 <div class="cart_footer">
                     <a href="#" class="back">
-                        Continue Shopping
+                        <i class="fa fa-angle-left"></i>
+                        <span>Continue Shopping</span>
                     </a>
                     <a href="checkout_step_1.html" class="btn_checkout">Checkout</a>
                 </div>
