--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="container">
                 <a href="index.html"><div class="logo"></div></a>
                 <div class="auth_section">
-                    <a href="#" class="btn_create_boutique">Create a boutique</a>
+                    <a href="owner_page_index.html" class="btn_create_boutique">Create a boutique</a>
                     <a href="#" class="btn_auth" data-toggle="modal" data-target="#registerModal">Sign Up</a>
                     <a href="#" class="btn_auth" data-toggle="modal" data-target="#loginModal">Login</a>
                 </div>
